@@ -1,3 +1,10 @@
+2007-02-03  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* src/lib/rbosa.rb,
+	  bin/rdoc-osa:
+	Adapted the generated RDoc to mention the possibility to pass optional
+	parameters as a Hash key/value object.
+
 2007-02-02  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* tests/tc_textedit.rb,
